[package]
name = "casperwallet"
version = "0.1.0"
authors = ["Karan Dhareshwar <karandh@jhu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "casperwallet"
path= "src/lib.rs"


[dependencies]
ed25519-dalek = "0.9.1"
ring = "0.16.11"
