[package]
name = "casperwallet"
version = "0.1.0"
authors = ["Karan Dhareshwar <karandh@jhu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "casperwallet"
path= "src/lib.rs"


[dependencies]
openssl = "0.10.28"
hex = "0.4.2"