[package]
name = "casperwallet"
version = "0.1.0"
authors = ["Karan Dhareshwar <karandh@jhu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name= "casperwallet"
path= "src/lib.rs"


[dependencies]
rand = "0.7"
ed25519-dalek = "1.0.0-pre.3"
hex = "0.4.2"
mongodb = "0.9.2"
bson = "0.14.1"

